kubernetes/apps/network/envoy-gateway/config/envoy.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: network
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IDdCVi9ia2RJ
[...]
        JJa5d82bCEi/JwA=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq12rf2uz7mtzqsz9tauezfh9f7p8pyt2nec35w82epe94lfqpzmejhf0f9x0w7c6fn7g4deagwuwaem004eetzeyd63wjkgp5p8c5ev2yukyl8cr7cgjx70zk8dff5dt3rgec630rzj0y78fzejue2deppelwl4fzlq6ykvax99r4vefyp8frcdg6kyvv0q3temf7zctl83styqly3h9vlfjzkmrrumvax2l52fxrz6w28xgj9axe6mfpef79swa836dpsm3a05fmxt6txh0s6ew72xgzpq44czz3me97v4jz8gtptvn8x23jtg87pufkgh2pqpp60z9jmutpc4rs4zgdy8mvhnvdmyphj95quddapushyzdv4yd24pv7rye47asy5gzc84s9554lp0qfrucme6gv90ss3ezcw030z7fmaa7fgcl5twvyuyu04f8kt9q0fme4xf2m3nfn9hgqcysxthg0n [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-09-22T22:46:39Z"
  mac: ENC[AES256_GCM,data:H8p47EpW9QYHTUOtVvFF++hc6W8TRPzoCeUxRYk6fieel3YxGWQz/ym7c/mzx+7BBNiYqdcyvef6q3BVXIAizAvw9+a18nihERuQ8YJAwqt/ENO30G8MXamhNU4K7y6YpiiNt2siJCWOwFeksuvGmALwFrXB1q/XTM54rJrKzZ8=,iv:ZeIxKxQvblFrL/ClU2RAXZsaIfxxb36D1+qU5Mn/ZUM=,tag:owQd/xhHHFXAEvr7YcjxVQ==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.aknuk.dev
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: external.aknuk.dev
      lbipam.cilium.io/ips: 192.168.49.203
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: aknuk-dev-production-tls
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IDdCVi9ia2RJ
[...]
        JJa5d82bCEi/JwA=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq12rf2uz7mtzqsz9tauezfh9f7p8pyt2nec35w82epe94lfqpzmejhf0f9x0w7c6fn7g4deagwuwaem004eetzeyd63wjkgp5p8c5ev2yukyl8cr7cgjx70zk8dff5dt3rgec630rzj0y78fzejue2deppelwl4fzlq6ykvax99r4vefyp8frcdg6kyvv0q3temf7zctl83styqly3h9vlfjzkmrrumvax2l52fxrz6w28xgj9axe6mfpef79swa836dpsm3a05fmxt6txh0s6ew72xgzpq44czz3me97v4jz8gtptvn8x23jtg87pufkgh2pqpp60z9jmutpc4rs4zgdy8mvhnvdmyphj95quddapushyzdv4yd24pv7rye47asy5gzc84s9554lp0qfrucme6gv90ss3ezcw030z7fmaa7fgcl5twvyuyu04f8kt9q0fme4xf2m3nfn9hgqcysxthg0n [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-09-22T22:46:39Z"
  mac: ENC[AES256_GCM,data:H8p47EpW9QYHTUOtVvFF++hc6W8TRPzoCeUxRYk6fieel3YxGWQz/ym7c/mzx+7BBNiYqdcyvef6q3BVXIAizAvw9+a18nihERuQ8YJAwqt/ENO30G8MXamhNU4K7y6YpiiNt2siJCWOwFeksuvGmALwFrXB1q/XTM54rJrKzZ8=,iv:ZeIxKxQvblFrL/ClU2RAXZsaIfxxb36D1+qU5Mn/ZUM=,tag:owQd/xhHHFXAEvr7YcjxVQ==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.aknuk.dev
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: internal.aknuk.dev
      lbipam.cilium.io/ips: 192.168.49.201
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: aknuk-dev-production-tls
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IDdCVi9ia2RJ
[...]
        JJa5d82bCEi/JwA=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq12rf2uz7mtzqsz9tauezfh9f7p8pyt2nec35w82epe94lfqpzmejhf0f9x0w7c6fn7g4deagwuwaem004eetzeyd63wjkgp5p8c5ev2yukyl8cr7cgjx70zk8dff5dt3rgec630rzj0y78fzejue2deppelwl4fzlq6ykvax99r4vefyp8frcdg6kyvv0q3temf7zctl83styqly3h9vlfjzkmrrumvax2l52fxrz6w28xgj9axe6mfpef79swa836dpsm3a05fmxt6txh0s6ew72xgzpq44czz3me97v4jz8gtptvn8x23jtg87pufkgh2pqpp60z9jmutpc4rs4zgdy8mvhnvdmyphj95quddapushyzdv4yd24pv7rye47asy5gzc84s9554lp0qfrucme6gv90ss3ezcw030z7fmaa7fgcl5twvyuyu04f8kt9q0fme4xf2m3nfn9hgqcysxthg0n [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-09-22T22:46:39Z"
  mac: ENC[AES256_GCM,data:H8p47EpW9QYHTUOtVvFF++hc6W8TRPzoCeUxRYk6fieel3YxGWQz/ym7c/mzx+7BBNiYqdcyvef6q3BVXIAizAvw9+a18nihERuQ8YJAwqt/ENO30G8MXamhNU4K7y6YpiiNt2siJCWOwFeksuvGmALwFrXB1q/XTM54rJrKzZ8=,iv:ZeIxKxQvblFrL/ClU2RAXZsaIfxxb36D1+qU5Mn/ZUM=,tag:owQd/xhHHFXAEvr7YcjxVQ==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IDdCVi9ia2RJ
[...]
        JJa5d82bCEi/JwA=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq12rf2uz7mtzqsz9tauezfh9f7p8pyt2nec35w82epe94lfqpzmejhf0f9x0w7c6fn7g4deagwuwaem004eetzeyd63wjkgp5p8c5ev2yukyl8cr7cgjx70zk8dff5dt3rgec630rzj0y78fzejue2deppelwl4fzlq6ykvax99r4vefyp8frcdg6kyvv0q3temf7zctl83styqly3h9vlfjzkmrrumvax2l52fxrz6w28xgj9axe6mfpef79swa836dpsm3a05fmxt6txh0s6ew72xgzpq44czz3me97v4jz8gtptvn8x23jtg87pufkgh2pqpp60z9jmutpc4rs4zgdy8mvhnvdmyphj95quddapushyzdv4yd24pv7rye47asy5gzc84s9554lp0qfrucme6gv90ss3ezcw030z7fmaa7fgcl5twvyuyu04f8kt9q0fme4xf2m3nfn9hgqcysxthg0n [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-09-22T22:46:39Z"
  mac: ENC[AES256_GCM,data:H8p47EpW9QYHTUOtVvFF++hc6W8TRPzoCeUxRYk6fieel3YxGWQz/ym7c/mzx+7BBNiYqdcyvef6q3BVXIAizAvw9+a18nihERuQ8YJAwqt/ENO30G8MXamhNU4K7y6YpiiNt2siJCWOwFeksuvGmALwFrXB1q/XTM54rJrKzZ8=,iv:ZeIxKxQvblFrL/ClU2RAXZsaIfxxb36D1+qU5Mn/ZUM=,tag:owQd/xhHHFXAEvr7YcjxVQ==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
sops:
  age:
    - enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IG1sa2VtNzY4eDI1NTE5IDdCVi9ia2RJ
[...]
        JJa5d82bCEi/JwA=
        -----END AGE ENCRYPTED FILE-----
      recipient: age1pq12rf2uz7mtzqsz9tauezfh9f7p8pyt2nec35w82epe94lfqpzmejhf0f9x0w7c6fn7g4deagwuwaem004eetzeyd63wjkgp5p8c5ev2yukyl8cr7cgjx70zk8dff5dt3rgec630rzj0y78fzejue2deppelwl4fzlq6ykvax99r4vefyp8frcdg6kyvv0q3temf7zctl83styqly3h9vlfjzkmrrumvax2l52fxrz6w28xgj9axe6mfpef79swa836dpsm3a05fmxt6txh0s6ew72xgzpq44czz3me97v4jz8gtptvn8x23jtg87pufkgh2pqpp60z9jmutpc4rs4zgdy8mvhnvdmyphj95quddapushyzdv4yd24pv7rye47asy5gzc84s9554lp0qfrucme6gv90ss3ezcw030z7fmaa7fgcl5twvyuyu04f8kt9q0fme4xf2m3nfn9hgqcysxthg0n [...]
  encrypted_regex: ^(data|stringData)$
  lastmodified: "2026-09-22T22:46:39Z"
  mac: ENC[AES256_GCM,data:H8p47EpW9QYHTUOtVvFF++hc6W8TRPzoCeUxRYk6fieel3YxGWQz/ym7c/mzx+7BBNiYqdcyvef6q3BVXIAizAvw9+a18nihERuQ8YJAwqt/ENO30G8MXamhNU4K7y6YpiiNt2siJCWOwFeksuvGmALwFrXB1q/XTM54rJrKzZ8=,iv:ZeIxKxQvblFrL/ClU2RAXZsaIfxxb36D1+qU5Mn/ZUM=,tag:owQd/xhHHFXAEvr7YcjxVQ==,type:str]
  mac_only_encrypted: true
  version: 3.13.3
